implement maintenance add endpoint, use paceholders for the rest
